change text and style

--- a/src/app/landingpage/login/email-sent/email-send.component.html
+++ b/src/app/landingpage/login/email-sent/email-send.component.html
@@ -21,7 +21,7 @@
                 </div>
             }
         </div>
-        <button type="submit" class="submitBtn" [ngClass]="{'submitBtn': checkAllInputs(), 'submitBtnDisabled': !checkAllInputs()}" [disabled]="!checkAllInputs()">Get started</button>
+        <button type="submit" class="submitBtn" [ngClass]="{'submitBtn': checkAllInputs(), 'submitBtnDisabled': !checkAllInputs()}" [disabled]="!checkAllInputs()">Send Email</button>
     </form>
     <app-footer></app-footer>
 </section>
