--- a/src/app/landingpage/login/password-reset/password-reset.component.scss
+++ b/src/app/landingpage/login/password-reset/password-reset.component.scss
@@ -1,135 +1,152 @@
-@import './../../../../styles.scss';
+@import "./../../../../styles.scss";
 
 section {
-    height: 100dvh;
-    width: 100vw;
-    @include dFlex($j: space-between);
-    flex-direction: column;
-    background-image: url('../../../../assets/img/background_img_woman.webp');
-    background-size: cover;
-    background-position: center;
+  height: 100dvh;
+  width: 100vw;
+  @include dFlex($j: space-between);
+  flex-direction: column;
+  background-image: url("../../../../assets/img/background_img_woman.webp");
+  background-size: cover;
+  background-position: center;
 }
-    .loginBtn {
-        color: whitesmoke;
-        background-color: $btnColor;
-        padding: 26px;
-        padding-top: 12px;
-        padding-bottom: 12px;
-        border: none;
-        border-radius: 40px;
-        font-size: larger;
-        cursor: pointer;
-        transition: ease-in-out 0.3s;
+.loginBtn {
+  color: whitesmoke;
+  background-color: $btnColor;
+  padding: 26px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  border: none;
+  border-radius: 40px;
+  font-size: larger;
+  cursor: pointer;
+  transition: ease-in-out 0.3s;
 
-        &:hover {
-            background-color: whitesmoke;
-            color: $btnColor;
-        }
-    }
+  &:hover {
+    background-color: whitesmoke;
+    color: $btnColor;
+  }
+}
 
 .contentDiv {
-    @include dFlex($j: space-between);
+  @include dFlex($j: space-between);
+  flex-direction: column;
+  background-color: white;
+  border-radius: 25px;
+  padding: 2rem;
+  min-width: 400px;
+  h1 {
+    font-size: 3.5em;
+    margin: 0;
+    margin-bottom: 0.5rem;
+    color: $btnColor;
+  }
+  .positionInputs {
+    @include dFlex($a: start, $g: 12px);
     flex-direction: column;
-    background-color: white;
-    border-radius: 25px;
-    padding: 2rem;
-    min-width: 400px;
-    h1 {
-        font-size: 3.5em;
-        margin: 0;
-        margin-bottom: 0.5rem;
-        color: $btnColor;
+    width: 100%;
+    .normalInput {
+      padding: 12px;
+      padding-left: 16px;
+      padding-right: 16px;
+      border: 1px solid $btnColor;
+      border-radius: 30px;
+      outline: none;
+      font-size: larger;
+      width: calc(100% - 2rem);
+      color: $btnColor;
     }
-    .positionInputs{
-        @include dFlex($a: start, $g: 12px);
-        flex-direction: column;
-        width: 100%;
-        .normalInput {
-            padding: 12px;
-            padding-left: 16px;
-            padding-right: 16px;
-            border: 1px solid $btnColor;
-            border-radius: 30px;
-            outline: none;
-            font-size: larger;
-            width: calc(100% - 2rem);
-            color: $btnColor;
-        }
-    }
+  }
 }
 
 .submitBtn {
-    margin-top: 1.2rem;
-    color: whitesmoke;
-    background-color: $btnColor;
-    padding: 26px;
-    padding-top: 12px;
-    padding-bottom: 12px;
-    border: none;
-    border-radius: 40px;
-    font-size: larger;
-    border: 1px solid $btnColor;
-    cursor: pointer;
-    transition: ease-in-out 0.3s;
+  margin-top: 1.2rem;
+  color: whitesmoke;
+  background-color: $btnColor;
+  padding: 26px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  border: none;
+  border-radius: 40px;
+  font-size: larger;
+  border: 1px solid $btnColor;
+  cursor: pointer;
+  transition: ease-in-out 0.3s;
 
-    &:hover {
-        background-color: #0919ce;
-        color: white;
-    }
+  &:hover {
+    background-color: #0919ce;
+    color: white;
+  }
 }
 
 .submitBtnDisabled {
-    margin-top: 1.2rem;
-    color: $btnColor;
-    background-color: white;
-    padding: 26px;
-    padding-top: 12px;
-    padding-bottom: 12px;
-    border: none;
-    border-radius: 40px;
-    font-size: larger;
-    border: 1px solid $btnColor;
-    transition: ease-in-out 0.3s;
+  margin-top: 1.2rem;
+  color: #ffff;
+  background: #2E3EDF80;
+  padding: 26px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  border: none;
+  border-radius: 40px;
+  font-size: larger;
+  border: 1px solid $btnColor;
+  transition: ease-in-out 0.3s;
 }
 
-.invalidFeedback{
-    width: 100%;
-    @include dFlex($j: flex-start, $g: 16px);
-    color: red;
-    img{
-        margin-left: 16px;
-        margin-right: 16px;
-    }
+.invalidFeedback {
+  width: 100%;
+  @include dFlex($j: flex-start, $g: 16px);
+  color: red;
+  img {
+    margin-left: 16px;
+    margin-right: 16px;
+  }
 }
 
 ::placeholder {
-    color: $btnColor;
-    opacity: 1;
-    /* Firefox */
+  color: $btnColor;
+  opacity: 1;
+  /* Firefox */
 }
 
 ::-ms-input-placeholder {
-    /* Edge 12-18 */
-    color: $btnColor;
+  /* Edge 12-18 */
+  color: $btnColor;
 }
 
 .passwortImg {
-    width: 100%;
-    @include dFlex($j: flex-start);
-    .passwordInput {
-        padding: 12px;
-        padding-left: 16px;
-        padding-right: 48px;
-        border: 1px solid $btnColor;
-        border-radius: 30px;
-        outline: none;
-        font-size: larger;
-        width: calc(100% - 4rem);
-        color: $btnColor;
-    }
+  width: 100%;
+  @include dFlex($j: flex-start);
+  .passwordInput {
+    padding: 12px;
+    padding-left: 16px;
+    padding-right: 48px;
+    border: 1px solid $btnColor;
+    border-radius: 30px;
+    outline: none;
+    font-size: larger;
+    width: calc(100% - 4rem);
+    color: $btnColor;
+  }
 
-    img {
-        margin-left: -40px;
-        cursor: pointer;
-    }
+  img {
+    margin-left: -40px;
+    cursor: pointer;
+  }
+}
+.infoText {
+  padding: 32px;
+  text-align: center;
+  padding-top: 32px;
+  padding-bottom: 18px;
+}
+
+.infoTextBlue {
+  color: #2e3edf;
+  font-size: 18px;
+  font-weight: 400;
+}
+.infoTextSpan {
+  color: black;
+  font-size: 18px;
+  font-weight: 400;
 }
