--- a/src/app/landingpage/login/password-reset/password-reset.component.html
+++ b/src/app/landingpage/login/password-reset/password-reset.component.html
@@ -2,11 +2,15 @@
     <app-header></app-header>
 
     <form class="contentDiv" (ngSubmit)="onSubmit(contactForm)" #contactForm="ngForm">
-        <h1>Sing Up</h1>
+        <h1>Reset password</h1>
+        <div class="infoText">
+            <span class="infoTextSpan">Create a new password for your <span class="infoTextBlue">Videoflix</span><br> account.</span>
+        </div>
+
         <div class="positionInputs">
             <!----Password------>
             <div class="passwortImg">
-                <input [type]="passwordFieldType" [(ngModel)]="password" placeholder="Password" name="firstPassword" #firstPassword="ngModel" required class="passwordInput">
+                <input [type]="passwordFieldType" [(ngModel)]="password" placeholder="Enter a password" name="firstPassword" #firstPassword="ngModel" required class="passwordInput">
                 <img src="../../assets/img/blue_eye.svg" alt="eye image" (click)="togglePasswordVisibility()">
             </div>
             @if (!checkPassword() &&firstPassword.touched) {
@@ -21,7 +25,7 @@
 
             <!----Confirm Password------>
             <div class="passwortImg">
-                <input [type]="confirmPasswordFieldType" [(ngModel)]="confirm_password" placeholder="Confirm password" name="confirmPassword" #confirmPassword="ngModel" required class="passwordInput">
+                <input [type]="confirmPasswordFieldType" [(ngModel)]="confirm_password" placeholder="Confirm Password" name="confirmPassword" #confirmPassword="ngModel" required class="passwordInput">
                 <img src="../../assets/img/blue_eye.svg" alt="eye image" (click)="toggleConfirmPasswordVisibility()">
             </div>
             @if (!checkConfirmPassword() && confirmPassword.touched) {
@@ -40,7 +44,7 @@
             }
 
         </div>
-        <button type="submit" class="submitBtn" [ngClass]="{'submitBtn': checkAllInputs(), 'submitBtnDisabled': !checkAllInputs()}" [disabled]="!checkAllInputs()">Get started</button>
+        <button type="submit" class="submitBtn" [ngClass]="{'submitBtn': checkAllInputs(), 'submitBtnDisabled': !checkAllInputs()}" [disabled]="!checkAllInputs()">Reset my password</button>
     </form>
     <app-footer></app-footer>
 </section>
