--- a/src/app/landingpage/video-site/video-preview/video-preview.component.html
+++ b/src/app/landingpage/video-site/video-preview/video-preview.component.html
@@ -1,4 +1,4 @@
-<section (mouseenter)="shwowDescription()" (mouseleave)="hideDescription()">
+<section (click)="showVideoDetails()" (mouseenter)="shwowDescription()" (mouseleave)="hideDescription()">
     <img src="{{ video.screenshot }}" alt="">
     <div class="descriptionBox" [ngClass]="{ 'descriptionVisible' : isDescriptionVisible, 'descriptionHide' : !isDescriptionVisible }">
         <span>{{ video.description }}</span>
