--- a/src/app/landingpage/video-site/video-display/video-display.component.html
+++ b/src/app/landingpage/video-site/video-display/video-display.component.html
@@ -1,9 +1,20 @@
-<div class="video-display-overlay">
+<!-- <div class="video-display-overlay">
     <div class="video-display-content">
         <button (click)="close()">Close</button>
         <h2>{{ video.title }}</h2>
         <video controls>
             <source [src]="video.video_folder" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+        <p>{{ video.description }}</p>
+    </div>
+</div> -->
+<div class="video-display-overlay">
+    <div class="video-display-content">
+        <button (click)="close()">Close</button>
+        <h2>{{ video.title }}</h2>
+        <video id="videoPlayer" class="video-js vjs-default-skin" controls preload="auto" width="640" height="264" data-setup="{}">
+            <source [src]="video.video_folder" type="application/x-mpegURL">
             Your browser does not support the video tag.
         </video>
         <p>{{ video.description }}</p>
