--- a/src/app/landingpage/video-site/video-display/video-display.component.html
+++ b/src/app/landingpage/video-site/video-display/video-display.component.html
@@ -20,3 +20,15 @@
         <p>{{ video.description }}</p>
     </div>
 </div>
+
+<!-- <div class="video-display-overlay">
+    <div class="video-display-content">
+        <button (click)="close()">Close</button>
+        <h2>{{ video.title }}</h2>
+        <video id="videoPlayer" class="video-js vjs-default-skin" controls preload="auto" width="640" height="264" data-setup="{}">
+            <source [src]="'http://127.0.0.1:8000/media/videos/city/city_480p.m3u8'" type="application/x-mpegURL">
+            Your browser does not support the video tag.
+        </video>
+        <p>{{ video.description }}</p>
+    </div>
+</div> -->
