--- a/src/app/landingpage/video-site/video-site.component.scss
+++ b/src/app/landingpage/video-site/video-site.component.scss
@@ -32,6 +32,10 @@ section{
     }
 }
 
+.btnBoxRight{
+    position: relative;
+    z-index: 4;
+}
 
 .blueBtn{
     @include dFlex($g: 8px);
@@ -45,7 +49,6 @@ section{
     font-size: large;
     cursor: pointer;
     transition: ease-in-out 0.3s;
-    z-index: 4;
     &:hover {
         background-color: white;
         color: $btnColor;
@@ -119,5 +122,69 @@ header{
                 gap: 4rem;
             }
         }
+    }
+}
+
+.profilSelection{
+    position: absolute;
+    top: 120%;
+    right: 0;
+    width: 140px;
+    height: auto;
+    padding: 12px;
+    @include dFlex($g: 12px);
+    flex-direction: column;
+    background-color: #1e1e1e;
+    border-radius: 12px;
+    .profilSelectionBtn{
+        color: whitesmoke;
+        border: none;
+        background: transparent;
+        font-size: large;
+        cursor: pointer;
+        @include dFlex($g: 6px);
+        &:hover {
+            color: #6e67d1;
+            img {
+                filter: invert(42%) sepia(100%) saturate(4000%) hue-rotate(220deg) brightness(95%) contrast(90%);
+            }
+        }
+    }
+}
+
+
+.slideInAnimation {
+    animation: slideDown 0.3s forwards;
+}
+
+@keyframes slideDown {
+    0% {
+        transform: translateY(-200%);
+        opacity: 0;
+    }
+    80%{
+        opacity: 0;
+    }
+    100% {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
+.slideOutAnimation {
+    animation: slideUp 0.3s forwards;
+}
+
+@keyframes slideUp {
+    0% {
+        transform: translateY(0);
+        opacity: 1;
+    }
+    10%{
+        opacity: 0;
+    }
+    100% {
+        transform: translateY(-200%);
+        opacity: 0;
     }
 }
