--- a/src/app/landingpage/video-site/video-display/video-display.component.html
+++ b/src/app/landingpage/video-site/video-display/video-display.component.html
@@ -9,15 +9,32 @@
         <p>{{ video.description }}</p>
     </div>
 </div> -->
-<div class="video-display-overlay">
-    <div class="video-display-content">
-        <button (click)="close()">Close</button>
-        <h2>{{ video.title }}</h2>
-        <video id="videoPlayer" class="video-js vjs-default-skin" controls preload="auto" width="640" height="264" data-setup="{}">
-            <source [src]="video.video_folder" type="application/x-mpegURL">
-            Your browser does not support the video tag.
-        </video>
-        <p>{{ video.description }}</p>
+<div class="video-display-overlay" (click)="onOverlayClick($event)">
+    <div class="video-display-content" (click)="$event.stopPropagation()">
+        <button class="button" (click)="close()">Close</button>
+        <div class="video-img-container">
+            <img [src]="video.screenshot" alt="">
+            <h2>{{ video.title }}</h2>
+            <span class="presents-logo">V </span><span class="presents-text">Film</span>
+
+        </div>
+       
+            
+            <div class="video-player-content">
+                
+                
+            
+            <span>Video Description</span>
+            <p>{{ video.description }}</p>
+            <video id="videoPlayer" class="video-js vjs-default-skin" controls preload="auto" width="640" height="264" data-setup="{}">
+                <source [src]="video.video_folder" type="application/x-mpegURL">
+                Your browser does not support the video tag.
+            </video>
+            
+            </div>
+            
+        
+       
     </div>
 </div>
 
