--- a/src/app/landingpage/video-site/video-display/video-display.component.scss
+++ b/src/app/landingpage/video-site/video-display/video-display.component.scss
@@ -1,84 +1,96 @@
 .video-display-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.8);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
 }
 
 .video-display-content {
-    background: #141414;
-    // background: #010101; //videoplayerfarbe
-    border-radius: 8px;
-    max-width: 90%;
-    /* max-height: 100%; */
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    height: 100dvh;
-    justify-content: center;
+  background: #141414;
+  // background: #010101; //videoplayerfarbe
+  border-radius: 8px;
+  max-width: 28dvw;
+  /* max-height: 100%; */
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  height: 100dvh;
+  justify-content: center;
 }
 
-.video-player-content{
-    padding: 20px;
-    position: relative;
-    span{
-        position: absolute;
-        top: 4%;
-        left: 8px;
-    }
-    p{
-        position: absolute;
-        top: 6%;
-        left: 14px;
-    }
+.video-player-content {
+  position: relative;
 }
 
-h2{
-    position: absolute;
-    top: 34%;
-    left: 14px;
+h2 {
+  position: absolute;
+  top: 18%;
+  left: 16px;
+  font-size: 50px;
 }
-.presents-logo{
-      position: absolute;
-      top: 29%;
-    left: 8px;
-    background: linear-gradient(0deg, #3547FF -0.03%, #8903FF 100%);
-    -webkit-background-clip: text;
-    background-clip: text;
-    color: transparent;
-    font-weight: 900;
-    font-size: 42px;
+.presents-logo {
+  position: absolute;
+  top: 18%;
+  left: 8px;
+  background: linear-gradient(0deg, #3547ff -0.03%, #8903ff 100%);
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+  font-weight: 900;
+  font-size: 42px;
 }
-.presents-text{
-    position: absolute;
-    top: 34%;
-    left: 39px;
-    opacity: 72%;
-    /* background: linear-gradient(0deg, #3547FF -0.03%, #8903FF 100%); */
-    -webkit-background-clip: text;
-    background-clip: text;
-    color: #ffff;
+.presents-text {
+  position: absolute;
+  top: 22%;
+  left: 39px;
+  opacity: 72%;
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: #ffff;
 }
-.button{
-    position: absolute;
-    top: 18px;
-    right: 24px;
+.img-back {
+  position: absolute;
+  top: 18px;
+  right: 24px;
+  cursor: pointer;
 }
-.video-img-container{
-    position: relative;
-    img{
-        width: -webkit-fill-available;
-        height: auto;
-        mask-image: linear-gradient(to top, transparent 0%, black 5%);
-    }
+.video-img-container {
+  position: relative;
+  img {
+    width: -webkit-fill-available;
+    height: auto;
+    mask-image: linear-gradient(to top, transparent 0%, black 5%);
+  }
 }
-#videoPlayer{
-    padding-top: 115px;
+#videoPlayer {
+  cursor: pointer;
+  margin-top: 24px;
+  width: -webkit-fill-available;
+  height: -webkit-fill-available;
+}
+
+.description-container {
+  display: flex;
+  //   position: absolute;
+  top: 6px;
+  flex-direction: column;
+  text-align: justify;
+  padding-left: 8px;
+  max-width: 80%;
+  overflow: hidden;
+  overflow-wrap: break-word;
+  span {
+    font-size: 32px;
+  }
+  .description-text {
+    font-size: 16px;
+    padding-left: 8px;
+  }
 }
