--- a/src/app/landingpage/video-site/profile-details/profile-details.component.html
+++ b/src/app/landingpage/video-site/profile-details/profile-details.component.html
@@ -9,17 +9,28 @@
             <span>If you want, you can add more details to your profile here.</span>
         </div>
         <div class="lineBox">
+            <!-- render 4-loop -->
             @for (field of profileFields; track $index) {
                 <div class="headerDiv">
                     <span class="profileDetailsTitle">{{ field.name }}</span>
+                    <!-- render errors -->
                     @if(!checkLenght($index)) {
-                        @if ($index == 0 || $index == 1 || $index == 2) {
+                        @if ($index == 0 || $index == 1) {
                             <span class="invalidFeedback"><img src="../../../../assets/img/warning.svg" alt="warningImg">
-                                This vield have 3 or more than characters.</span>
+                                This field must have 3 or more characters.</span>
+                        }
+                        @if ($index == 2 && !checkEmailFormat($index)) {
+                            <span class="invalidFeedback"><img src="../../../../assets/img/warning.svg" alt="warningImg">
+                                Please enter a valid email.</span>
+                        }
+                        @if ($index == 3 && !checkPhoneFormat($index) && !checkIfFieldIsEmpty($index)) {
+                            <span class="invalidFeedback"><img src="../../../../assets/img/warning.svg" alt="warningImg">
+                                Please enter a valid phonenumber.</span>
                         }
                     }
                 </div>
-                <!-- <div class="profileDetails">
+                <div class="profileDetails">
+                    <!-- render inputs -->
                     @if (field.isEditing) {
                         <input 
                             [(ngModel)]="field.value"
@@ -30,31 +41,22 @@
                     } @else {
                         <span *ngIf="!field.isEditing">{{ field.value }}</span>
                     }
-                        <button class="editBtn" (click)="toggleEdit($index)">
-                            {{ field.isEditing ? 'Check' : 'Edit' }}
-                        </button>
-                </div> -->
-                <div class="profileDetails">
-                    <input *ngIf="field.isEditing" 
-                        [(ngModel)]="field.value" 
-                        [placeholder]="field.placeholder" 
-                        [type]="field.inputType" 
-                        [name]="field.name" 
-                        #fieldModel="ngModel">
-                        <!-- (ngModelChange)="onInputChange($event, $index)"> -->
-                    <span *ngIf="!field.isEditing">{{ field.value }}</span>
-                    <button class="editBtn" (click)="toggleEdit($index)">
+                    <span class="editBtn" (click)="toggleEdit($index)">
                         {{ field.isEditing ? 'Check' : 'Edit' }}
-                    </button>
+                    </span>
                 </div>
             }
         </div>
+        <!-- render check warning -->
         @if (showCheckWarning()) {
             <span class="invalidFeedbackBottom">Make sure to click on check.</span>
         }
-        <button type="submit" [disabled]="!valuesChanged"
-            [ngClass]="{'saveBlueBtn': valuesChanged, 'saveBlueBtnDisabled': !valuesChanged}"
-        >Save</button>
+       
+        <button type="submit"
+        [disabled]="!isFormValid()"
+        [ngClass]="{'saveBlueBtn': isFormValid(), 'saveBlueBtnDisabled': !isFormValid()}">
+          Save
+        </button>
     </form>
     <app-footer></app-footer>
 </section>
